tests/pure_component/pure_component.exp
Error ------------------------------------------------------------------------------------------------------ test.js:4:3

Cannot create `C` element because property `x` is missing in props [1] but exists in object type [2]. [prop-missing]

   test.js:4:3
   4| (<C />); // error (`x` is a required prop)
        ^

References:
   test.js:4:2
   4| (<C />); // error (`x` is a required prop)
       ^^^^^ [1]
   test.js:3:37
   3| class C extends React.PureComponent<{ x: number }> {}
                                          ^^^^^^^^^^^^^ [2]



Found 1 error
